[package]
name = "rabuf"
version = "0.1.3"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "randome access buffer for io"
keywords = ["buffer", "io"]
categories = ["memory-management", "data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/rabuf"

[features]
default = ["buf_overf_rem_all"]

buf_lru = []
buf_stats = []

buf_overf_rem_all = ["buf_overf_rem"]
buf_overf_rem_half = ["buf_overf_rem", "buf_lru"]
buf_overf_rem = []

[dependencies]
