[package]
name = "rabuf"
version = "0.1.19"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "randome access buffer for io"
keywords = ["buffer", "io"]
categories = ["memory-management", "data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/rabuf"

[features]
default = ["buf_auto_buf_size", "buf_overf_rem_all", "buf_pin_zero", "buf_hash_turbo"]

buf_auto_buf_size = []

buf_overf_rem_all = ["buf_overf_rem"]
buf_overf_rem_half = ["buf_overf_rem", "buf_lru"]
buf_overf_rem = []

buf_lru = []

buf_pin_zero = []

buf_hash_turbo = ["buf_myhash"]
buf_myhash = []

buf_stats = []
buf_print_hits = []

buf_debug = []

[dependencies]
